# whisk

./: .gitignore  README.md  environment.yml  pyproject.toml
.github/workflows/: environment.yml  python-package-conda.yml
src/whisk/: __init__.py  _recipe.py  _table.py  _whisk.py
tests/: test_recipe.py  test_whisk.py
