[build-system]
requires = ["setuptools>=42", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "whisk"
requires-python = ">=3.8"
description = "Proportioned combination of data structures"
authors = [{ name = "Jamie Gooding" }, { email = "Jamie.Gooding@cern.ch" }]
dynamic = ["version"]
readme = "README.md"
license = { file = "COPYING" }

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
